--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,19 +2,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.2s linear;
 }
 
 body {
   font-family: Poppins, sans-serif;
 }
 
+select,
 button {
   outline: none;
   border: none;
+  cursor: pointer;
 }
 
 :root {
   --primary: #e2d703;
+  --primary2: #171d21;
 }
 
 a {
@@ -29,6 +33,21 @@ a {
   margin-right: auto;
 }
 
+.btn_outline {
+  font-size: 14px;
+  font-weight: 700;
+  border: 2px solid var(--primary);
+  background-color: transparent;
+  color: #fff;
+  padding: 10px 35px;
+  border-radius: 50px;
+}
+
+.btn_outline:hover {
+  background-color: var(--primary);
+  color: #000;
+}
+
 @media only screen and (max-width: 1024px) {
   .container {
     max-width: 980px;
@@ -39,4 +58,87 @@ a {
   .container {
     max-width: 720px;
   }
+}
+
+/* Header */
+#header {
+  width: 100%;
+  padding: 25px 0;
+  position: fixed;
+}
+
+#header.header_active {
+  background-color: var(--primary2);
+  padding: 15px 0;
+}
+
+#header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_navbar a {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 15px 30px;
+}
+.header_navbar a:is(:hover, :focus) {
+  color: var(--primary);
+}
+
+.header_actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.header_actions .divider {
+  height: 20px;
+  width: 3px;
+  background: hsla(0, 0%, 100%, 0.1);
+}
+
+.header_actions #select_country {
+  background-color: transparent;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.header_actions #select_country option {
+  color: #000;
+}
+
+.header_actions .select_country_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+/* Badge */
+.badge_fill {
+  color: var(--primary2);
+  background-color: #fff;
+  padding: 2px 10px;
+  font-size: 11px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.badge_outline {
+  border: 3px solid #fff;
+  color: #fff;
+  padding: 2px 10px;
+  background-color: transparent;
+  font-size: 11px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
