- Update UI homepage

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -27,11 +27,59 @@
 
 .hero_des {
   display: flex;
-  gap: 10px;
+  gap: 20px;
   margin-top: 10px;
   margin-bottom: 25px;
+  align-items: center;
+}
+
+.hero_des a {
+  color: #fff;
+}
+
+.hero_des a:is(:hover, :focus) {
+  color: var(--primary);
 }
 
 .section_hero_container .btn_outline {
   padding: 15px 40px;
+}
+
+.section_upcoming {
+  background: url("../images/upcoming-bg.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.section_upcoming .container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.upcoming_title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.upcoming_left_subtitle {
+  color: var(--primary);
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.upcoming_left_title {
+  color: #fff;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.upcoming_content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 30px;
+  margin-top: 50px;
+  flex-wrap: wrap;
 }
