--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -19,6 +19,7 @@ button {
 :root {
   --primary: #e2d703;
   --primary2: #171d21;
+  --primary3: #2e303e;
 }
 
 a {
@@ -46,6 +47,16 @@ a {
 .btn_outline:hover {
   background-color: var(--primary);
   color: #000;
+}
+
+.btn_filter {
+  color: #fff;
+  background-color: var(--primary2);
+  font-size: 12px;
+  font-weight: 500;
+  padding: 12px 26px;
+  border-radius: 50px;
+  border: 2px solid var(--primary3);
 }
 
 @media only screen and (max-width: 1024px) {
@@ -141,4 +152,37 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.calendar_des {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.time_des {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.time_des p,
+.calendar_des p {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+/* Movie Item */
+.movie_item {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-width: 265px;
+}
+
+.movie_item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
