--- a/src/assets/css/movie_detail.css
+++ b/src/assets/css/movie_detail.css
@@ -1,3 +1,10 @@
+.movie-detail .container{
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
 .movie-detail-banner {
     max-width: 300px;
 }
@@ -11,5 +18,24 @@
 
 .movie-detail {
     background: url(../images/movie-detail-bg.png) no-repeat;
-    
+    padding: 160px 0px;
+
+}
+
+.hero_des {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    align-items: center;
+}
+
+.hero_des a {
+    color: #fff;
+}
+
+.hero_des a:is(:hover, :focus) {
+    color: var(--primary);
 }
