--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -151,6 +151,7 @@ a {
   background-color: var(--primary2);
   height: 100%;
   min-width: 300px;
+  z-index: 99;
 }
 
 .header_navbar_mobile_top {
