- Add login basic, login gg

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -73,6 +73,18 @@ a {
   border: 2px solid var(--primary3);
 }
 
+#logout {
+  display: none;
+}
+
+#logout.active {
+  display: block;
+}
+
+.btn_signIn.active {
+  display: none;
+}
+
 /* Header */
 #header {
   width: 100%;
