--- a/src/assets/css/movie_detail.css
+++ b/src/assets/css/movie_detail.css
@@ -1,260 +1,222 @@
 .movie-detail .container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 50px;
+  display: flex;
+  align-items: center;
+  gap: 50px;
 }
 
 .detail-subtitle {
-    width: 239px;
-    height: 36px;
-    left: 508px;
-    top: 153px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  /* identical to box height */
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    /* identical to box height */
+  display: flex;
+  align-items: center;
 
-    display: flex;
-    align-items: center;
-
-    color: #F8F800;
+  color: #f8f800;
 }
 
 .detail-title {
-    width: 382px;
-    height: 78px;
-    left: 508px;
-    top: 189px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 78px;
+  /* identical to box height */
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 52px;
-    line-height: 78px;
-    /* identical to box height */
+  display: flex;
+  align-items: center;
 
-    display: flex;
-    align-items: center;
-
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .storyline {
-    width: 523px;
-    height: 44px;
-    left: 508px;
-    top: 363px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 21px;
-    display: flex;
-    align-items: center;
-
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .movie-detail-banner {
-    max-width: 300px;
+  max-width: 300px;
 }
 
 .movie-detail-banner img {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
-
-
 .movie-detail {
-    background: url(../images/movie-detail-bg.png) no-repeat;
-    padding: 160px 0px;
-
+  background: url(../images/movie-detail-bg.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 160px 0;
 }
 
 .details-actions {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px 40px;
-    max-width: 460px;
-    background: #242C38;
-    padding: 25px;
-    border: 1px solid var(--jet);
-    border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px 40px;
+  max-width: 460px;
+  background: #242c38;
+  padding: 25px;
+  border: 1px solid var(--jet);
+  border-radius: 4px;
+  margin-top: 40px;
 }
 
-
-
 .hero_des {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 20px;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-top: 10px;
+  margin-bottom: 25px;
+  align-items: center;
 }
 
 .hero_des a {
-    color: #fff;
+  color: #fff;
 }
 
 .hero_des a:is(:hover, :focus) {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .section_series {
-    background: url(../images/tv-series-bg.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
-    padding: 100px 0;
+  background: url(../images/tv-series-bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 100px 0;
 }
 
 .section_series .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .series_subtitle,
 .top_subtitle {
-    color: var(--primary);
-    font-size: 12px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    text-align: center;
+  color: var(--primary);
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-align: center;
 }
 
 .series_title,
 .top_title {
-    color: #fff;
-    font-size: 36px;
-    font-weight: 700;
-    text-align: center;
+  color: #fff;
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .series_content,
 .top_content {
-    margin-top: 50px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 50px;
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 50px;
+}
+
+.share {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 }
 
 .section_comment {
-    background:   #1a1e2a;
-    
+  background-color: var(--primary2);
+  padding: 60px 0;
 }
 
-.section_comment h1 {
-    width: 520px;
-    height: 85.29px;
-    left: 117px;
-    top: 1535px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 44px;
-    display: flex;
-    align-items: center;
-
-    color: #FFFFFF;
+.section_comment .container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.section_comment input {
-    width: 1153px;
-    height: 87.07px;
-    left: 117px;
-    top: 1675.38px;
-    background: #1D1D21;
-    border-radius: 50px;
-    padding-left: 50px;
-    border: #FFFFFF;
-    color: #FFFFFF;
-    margin-bottom: 50px;
+.comment-title {
+  color: #fff;
 }
 
-.list-comment{
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    padding-bottom: 50px;
+.comment_input {
+  outline: none;
+  border: none;
+  background-color: #1d1d21;
+  height: 50px;
+  padding: 40px 20px;
+  border-radius: 50px;
+  font-size: 24px;
+  color: white;
+}
+
+.list-comment {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .item-comment {
-    display: flex;
-    
+  display: flex;
+  gap: 20px;
 }
 
 .item-comment img {
-    width: 120px;
-    height: 106.62px;
-    left: 127px;
-    top: 1837.97px;
+  flex-shrink: 0;
+  width: 70px;
+  height: 70px;
 }
 
-.item-comment h1 {
-    width: 176px;
-    height: 31.98px;
-    left: 346px;
-    top: 1837.97px;
+.people-comment {
+  color: #fff;
+  background-color: #1d1d21;
+  padding: 20px;
+  border-radius: 20px;
+}
 
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
+.share p {
+  color: #fff;
+}
+
+.title-wrapper .title {
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.title-wrapper .text {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 1024px) {
+  .movie-detail .container {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 740px) {
+  .detail-subtitle {
     font-size: 20px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-}
+  }
 
-.item-comment .time-comment {
-    width: 256px;
-    height: 31.98px;
-    left: 542px;
-    top: 1837.97px;
+  .detail-title {
+    font-size: 36px;
+  }
 
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-
-    color: #595A5D;
-}
-
-.item-comment .text-comment {
-    width: 100%;
-    height: 31.98px;
-    left: 346px;
-    top: 2060.97px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-
-    color: #FFFFFF;
-}
-
-.people-comment{
-    display: flex;
-    margin-left: 40px;
-    flex-wrap: wrap;
+  .hero_des a {
+    font-size: 14px;
+  }
 }
