--- a/src/assets/css/tv_show.css
+++ b/src/assets/css/tv_show.css
@@ -1,4 +1,4 @@
-.Movie {
+.tv_show {
   display: flex;
   background: url(../images/image18.png) no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@
   align-items: center;
 }
 
-.Movie h1 {
+.tv_show h1 {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
